--- a/package.json
+++ b/package.json
@@ -107,5 +107,8 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@3.1.0"
+  "packageManager": "yarn@3.1.0",
+  "dependencies": {
+    "sass": "^1.56.1"
+  }
 }
